--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/base": "^5.0.0-alpha.95",
-    "@mui/lab": "^5.0.0-alpha.97",
-    "@mui/material": "^5.10.3",
-    "@mui/styled-engine-sc": "^5.10.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
